@@ -5,5 +5,6 @@
    7-Nov-2020  - V0.13 Add methods to evaluate search results
   11-Nov-2020  - V0.14 Add full UniProt xref export method.
    7-Dec-2020  - V0.15 Refactor module, migrate MiscUtils methods to other modules, remove mock-data submodule
-  26-Mar-2020  - V0.16 Adjust fields and field names in alignment output object
-  28-Mar-2020  - V0.17 Further extensions in fields in alignment output object
+  26-Mar-2021  - V0.16 Adjust fields and field names in alignment output object
+  28-Mar-2021  - V0.17 Further extensions in fields in alignment output object
+  13-May-2021  - V0.18 Add searchDatabaseFasta() and make searchDatabase() consistent with mapDatabase()
